--- a/index.html
+++ b/index.html
@@ -14,13 +14,26 @@
   </head>
   <body>
       <header>
-          <nav>
+        <nav class="navbar navbar-expand-sm bg-light">
 
-          </nav>
+            <!-- Links -->
+            <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#work">My Previous work</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact me</a>
+            </li>
+            </ul>
       </header>
+
       <!--About DIV-->
-      <div id="about">
+      <div id="about" >
           <h1>Osten Crawford-Page</h1>
+          <h2> Web developer</h2>
 
       </div>
 
