--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
       <header>
-        <nav class="navbar navbar-expand-sm bg-light">
+        <nav class="navbar navbar-expand-sm bg-dark">
 
             <!-- Links -->
             <ul class="navbar-nav">
@@ -31,10 +31,9 @@
       </header>
 
       <!--About DIV-->
-      <div id="about" >
+      <div class="bg-warning container-fluid text-white container-sm" id="about" >
           <h1>Osten Crawford-Page</h1>
-          <h2> Web developer</h2>
-
+          <h2> Aspiring Web developer, i am open to both corporate inqueries or freelance work</h2>
       </div>
 
       <!--Work DIV-->
