Add contact as fixed footer

--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
         <nav class="navbar navbar-expand-sm bg-dark">
 
             <!-- Links -->
-            <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#work">My Previous work</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#contact">Contact me</a>
-            </li>
+            <ul class="navbar-nav justify-content-center">
+                <li class="nav-item text-plain">
+                    <a class="nav-link text-white" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#work" >My Previous work</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#contact">Contact me</a>
+                </li>
             </ul>
       </header>
 
       <!--About DIV-->
-      <div class="bg-warning container-fluid text-white container-sm" id="about" >
+      <div class="bg-warning container text-white container-md  id="about" >
           <h1>Osten Crawford-Page</h1>
           <h2> Aspiring Web developer, i am open to both corporate inqueries or freelance work</h2>
       </div>
@@ -42,14 +42,16 @@
       </div>
 
       <!-- Contact DIV -->
-      <div id="contact">
-          <ul>
-              <li><a href="https://www.facebook.com/">Facebook</a target="_blank"></li>
-              <li> <a href="https://github.com/OstenC-P" target="_blank">GitHub</a></li>
-              <li > <a href="https://au.linkedin.com/" target="_blank">Linked in</a> </li>
-          </ul>
+      <footer>
+          <div id="contact">
+             <ul>
+                <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+                <li> <a href="https://github.com/OstenC-P" target="_blank">GitHub</a></li>
+                <li > <a href="https://au.linkedin.com/" target="_blank">Linked in</a> </li>
+             </ul>
 
-      </div>
+            </div>
+      </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
