Test finished and satisfactory

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <a class="nav-link text-white" href="#about">About</a>
                 </li>
                
+
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#work" >My Previous work</a>
                 </li>
@@ -34,14 +35,16 @@
 
       <!--About DIV-->      
       <div class="container text-center" id="about">
+        <a name="about"></a>
           <h1> Osten crawford-page </h1> <!--IDK WHY INVESTIGATE-->
           <h1 >Osten Crawford-Page</h1>
-          <p> Aspitring web developer, contact me for any freelance or corporate oppertunties.</p>
+          <p> Aspiring web developer, contact me for any freelance or corporate oppertunties.</p>
           <p>My past..., history etc why i choose this career... </p> <!--Push OTHER CONTENT down-->
       </div>
 
       <!--Work DIV-->
       <div class="container text-center">
+          <a name="work"></a>
           <h1>My previous work</h1>
           <div class="card-columns card-deck">
               <!-- Card 1 -->
