--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                     </ul>
                 </div>
             </div>
-            </div>
         </nav>
       </header>
 
       <!--About DIV-->      
       <div class="container text-center" id="about">
         <a name="about"></a>
-          <h1> Osten crawford-page </h1> <!--IDK WHY INVESTIGATE-->
+        <!--DONT REMOVE BR's-->
+        <br> <br> <br>
           <h1 >Osten Crawford-Page</h1>
           <p> Aspiring web developer, contact me for any freelance or corporate oppertunties.</p>
           <p>My past..., history etc why i choose this career... </p> <!--Push OTHER CONTENT down-->
